--- a/templates/about.html
+++ b/templates/about.html
@@ -116,9 +116,8 @@
     <p class="h4">Mis Redes sociales</p><br>
     <div class="container">
       <div class="post-share-area mb-30">
-        <a href="#" class="facebook"><i class="fa fa-facebook"></i> Facebook</a>
-        <a href="#" class="tweet"><i class="fa fa-twitter"></i> Twitter</a>
-        <a href="#" class="instagram2"><i class="fa fa-instagram"></i> instagram</a>
+        <a href="https://youTube.com/@drvalmaceda" class="" style="background-color:#CD201F;"><i class="fa fa-youtube" ></i> Youtube</a>
+        <a href="https://instagram.com/drvalmaceda" class="instagram2"><i class="fa fa-instagram"></i> instagram</a>
       </div>
     </div><br>
   </div>
